# audiobin-frontend-elo-test

./: .gitignore  .prettierrc  AppIcon.icns  BUGS.txt  Dockerfile  README.md  angular.json  app.js  index.js  karma.conf.js  package-lock.json  package.json  tsconfig.json  typings.json
.github/workflows/: BuildTauriCI.yml
src/: _include-media.scss  ads.txt  chat.html  index.d.ts  index.html  styles.material.scss  styles.scss  test.ts
src-tauri/: Cargo.toml  build.rs  notes.txt  tauri.conf.json
src-tauri/Installer/Apps/SoftCollab Recorder.app/Contents/: Info.plist
src-tauri/Installer/Apps/SoftCollab Recorder.app/Contents/Resources/: Icon.icns
src-tauri/Installer/Apps/SoftCollab Recorder.app/Contents/_CodeSignature/: CodeResources
src-tauri/Installer/Apps/SoftCollab.app/Contents/: Info.plist
src-tauri/Installer/SoftCollab Installer/: SoftCollab Installer.pkgproj
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: app-routing.module.ts  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  material.module.ts
src/app/components/activitylog-card/: activitylog-card.component.html  activitylog-card.component.scss  activitylog-card.component.spec.ts  activitylog-card.component.ts
src/app/components/editable-username-modal/: editable-username-modal.component.html  editable-username-modal.component.scss  (+2 more)
src/app/enums/: apis.enum.ts  localStorageKeys.enum.ts  routes.enum.ts
src/app/interceptors/: http.interceptor.ts
src/app/interfaces/: S3File.interface.ts  user.interface.ts
src/environments/: environment.dev.ts  environment.local.ts  environment.prod.ts  environment.ts
(+52 files in other folders)
