[package]
name = "softcollab"
version = "1.0.0"
description = "SoftCollab App"
authors = ["you"]
license = ""
repository = ""
default-run = "softcollab"
edition = "2021"
rust-version = "1.59"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }
tauri-winres = "0.1.1"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3.0", features = ["api-all", "process-command-api", "windows7-compat"] }
reqwest = { version = "0.11.3", features = ["stream"] }
futures-util = "0.3.14"
chrono = { version = "0.4", features = ["unstable-locales"] }
dirs = "4.0.0"
execute = "0.2.11"
tauri-cli = "2.0.0-alpha.9"
ring = "0.16.20"
openssl-sys = "0.9.88"
web-audio-api = "0.29.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[package.metadata.cross.target.x86_64-pc-windows-msvc]
#xargo = false
#image = "test-image"
#runner = "custom-runner"
icon = [ "icons/icon.png" ]

[package.metadata.tauri-winres]
OriginalFilename = "SoftCollab.exe"
LegalCopyright = "Copyright © 2022"
FileDescription = "SoftCollab"
ProductName = "SoftCollab"
ProductVersion = "1.1.0"
